--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,23 @@
-<h1>
-  <%= gravatar_for @user %>
-  <%= @user.name %>
-</h1>
+<h1>User Profile</h1>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <h1><%= gravatar_for @user %></h1>
+    <%= form_for(@user) do |f| %>
+      <fieldset disabled>
+
+      <%= f.label :name %>
+      <%= f.text_field :name , class: 'form-control' %>
+
+      <%= f.label :email %>
+      <%= f.text_field :email , class: 'form-control' %>
+
+      <%= f.label :profile %>
+      <%= f.text_area :profile , class: 'form-control' %>
+
+      <%= f.label :location %>
+      <%= f.text_field :location , class: 'form-control' %>
+
+    <% end %>
+  </div>
+</div>
