--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -3,6 +3,21 @@
   <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
   <span class="content"><%= micropost.content %></span>
   <span class="timestamp">
+
+    <% if  micropost.bookmarked_by?(current_user) %>
+      ❤️ <%= micropost.bookmarks.count %>
+      <%= form_for(micropost.bookmarks.find_by(user_id: current_user.id),
+        html: { method: :delete } ) do |f| %>
+        <%= f.submit "del", class: "btn" %>
+      <% end %>
+    <% else %>
+      ♡ <%= micropost.bookmarks.count %>
+      <%= form_for(micropost.bookmarks.build) do |f| %>
+        <div><%= hidden_field_tag :user_id, current_user.id %></div>
+        <div><%= hidden_field_tag :micropost_id, micropost.id %></div>
+        <%= f.submit "add", class: "btn btn-primary" %>
+      <% end %>
+    <% end %>
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
     <% if current_user == micropost.user %>
       <%= link_to "delete", micropost, method: :delete,
