--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -2,6 +2,7 @@
   <%= link_to gravatar_for(micropost.user, size: 50), micropost.user %>
   <span class="user"><%= link_to micropost.user.name, micropost.user %></span>
   <span class="content"><%= micropost.content %></span>
+  <%= image_tag micropost.photo.url, size: '300x300' if micropost.photo? %>
   <span class="timestamp">
 
     <% if  micropost.bookmarked_by?(current_user) %>
@@ -12,10 +13,12 @@
       <% end %>
     <% else %>
       ♡ <%= micropost.bookmarks.count %>
-      <%= form_for(micropost.bookmarks.build) do |f| %>
-        <div><%= hidden_field_tag :user_id, current_user.id %></div>
-        <div><%= hidden_field_tag :micropost_id, micropost.id %></div>
-        <%= f.submit "add", class: "btn btn-primary" %>
+      <% unless micropost.user == current_user %>
+        <%= form_for(micropost.bookmarks.build) do |f| %>
+          <div><%= hidden_field_tag :user_id, current_user.id %></div>
+          <div><%= hidden_field_tag :micropost_id, micropost.id %></div>
+          <%= f.submit "add", class: "btn btn-primary" %>
+        <% end %>
       <% end %>
     <% end %>
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
