--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,20 +18,10 @@
       <h3>Microposts (<%= @user.microposts.count %>)</h3>
       <div class="raw">
         <div class="col-md-12">
-          <div class="pull-right">
-            <%= page_entries_info @microposts %>
-          </div>
-        </div>
-      </div>
-      <div class="raw">
-        <div class="col-md-12">
-          <div class="pull-right">
+          <div style="text-align: right">
+            <%= page_entries_info @microposts %><br>
             <%= paginate @microposts %>
           </div>
-        </div>
-      </div>
-      <div class="raw">
-        <div class="col-md-12">
           <ol class="microposts">
             <%= render @microposts %>
           </ol>
