--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,27 +6,11 @@
         <%= @user.name %>
       </h1>
     </section>
+    <%= render 'follow_form' if logged_in? %>
+    <%= render 'shared/user_nav' %>
   </aside>
   <div class="col-md-8">
-    <%= render 'follow_form' if logged_in? %>
-    <div>
-      <%= link_to "#{@user.following_relationships.count} followings ", followings_user_path %>
-      /
-      <%= link_to "#{@user.follower_relationships.count} followers ", followers_user_path %>
-    </div>
-    <% if @user.microposts.any? %>
-      <h3>Microposts (<%= @user.microposts.count %>)</h3>
-      <div class="raw">
-        <div class="col-md-12">
-          <div style="text-align: right">
-            <%= page_entries_info @microposts %><br>
-            <%= paginate @microposts %>
-          </div>
-          <ol class="microposts">
-            <%= render @microposts %>
-          </ol>
-        </div>
-      </div>
-    <% end %>
+    <h3><%= @user.name %>'s Microposts</h3>
+    <%= render 'shared/feed' %>
   </div>
 </div>
