--- a/app/views/shared/_micropost_form.html.erb
+++ b/app/views/shared/_micropost_form.html.erb
@@ -4,7 +4,7 @@
     <%= f.text_area :content, placeholder: "Compose new micropost..." %>
   </div>
   <div class="field">
-    <%= f.file_field :photo %>
+    <%= f.file_field :photo if !!@micropost.photo %>
   </div>
   <%= f.submit "Post", class: "btn btn-primary" %>
 <% end %>
