--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -6,24 +6,7 @@
     <%= image_tag micropost.photo.url, width: 300 if micropost.photo? %>
   </span>
   <span class="timestamp">
-
-    <% if  micropost.bookmarked_by?(current_user) %>
-      ❤️ <%= micropost.bookmarks.count %>
-      <%= form_for(micropost.bookmarks.find_by(user_id: current_user.id),
-        html: { method: :delete } ) do |f| %>
-        <%= f.submit "remove from bookmarks", class: "btn btn-xs" %>
-        <!--<button type="button" class="btn btn-default">❤️</button>-->
-      <% end %>
-    <% else %>
-      ♡ <%= micropost.bookmarks.count %>
-      <% unless micropost.user == current_user %>
-        <%= form_for(micropost.bookmarks.build) do |f| %>
-          <div><%= hidden_field_tag :user_id, current_user.id %></div>
-          <div><%= hidden_field_tag :micropost_id, micropost.id %></div>
-          <%= f.submit "add to bookmarks", class: "btn btn-primary btn-xs" %>
-        <% end %>
-      <% end %>
-    <% end %>
+    <%= render 'microposts/bookmark_form', micropost: micropost %>
     Posted <%= time_ago_in_words(micropost.created_at) %> ago.
     <% if current_user == micropost.user %>
       <%= link_to "delete", micropost, method: :delete,
